@@ -1,3 +1,8 @@
+2011-09-29	The InnoDB Team
+
+	* sync/sync0rw.c:
+	Fix Bug#13034534 RQG TESTS FAIL ON WINDOWS WITH CRASH NEAR RW_LOCK_DEBUG_PRINT
+
 2011-09-20	The InnoDB Team
 
 	* row/row0purge.c:
